@@ -20,7 +20,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
         android:versionCode="191"
-        android:versionName="2013.11.11g"
+        android:versionName="2013.11.23a"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.3 (18). -->
