@@ -2175,13 +2175,13 @@ The three arms of the {tIq'ghob:n:nolink} are said to represent honor, loyalty, 
     <table name="mem">
       <column name="_id">32660</column>
       <column name="entry_name">tIv</column>
-      <column name="part_of_speech">v:t</column>
+      <column name="part_of_speech">v:t_c</column>
       <column name="definition">enjoy</column>
       <column name="definition_de"></column>
       <column name="synonyms"></column>
       <column name="antonyms"></column>
       <column name="see_also">{bel:v}, {bel:n}</column>
-      <column name="notes">See {DuQ:v:2} and {'ey:v} for verbs more appropriate for the expression of the enjoyment of food or music among Klingons.[2]</column>
+      <column name="notes">For verbs used to express the enjoyment of food or music among Klingons, see {DuQ:v:2} and {'ey:v}.[2]</column>
       <column name="hidden_notes"></column>
       <column name="components"></column>
       <column name="examples"></column>
