@@ -1,5 +1,6 @@
 CHANGELOG
 
+2013-11-23: Edited some notes based on KGT.
 2013-11-11: New vocabulary from qepHom'a' 2013, including new words from Star Trek Into Darkness and Klingon weekday names.
 
 2013-10-21: Added "float" mode. This requires permission to "draw over other apps".
